--- a/.github/workflows/icons.yml
+++ b/.github/workflows/icons.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@373f7f263a76c20808c831209c920827a82a2847
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./assets/protocols
